--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
+    "react-virtuoso": "^4.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
